Fixeando visibilidad en seleccion de Category

--- a/src/styless/InsertVehicle.css
+++ b/src/styless/InsertVehicle.css
@@ -93,3 +93,11 @@
 .details-label {
   margin-top: 20px; /* Agrega un margen superior mayor */
 }
+
+.success-message {
+  color: green;
+}
+
+.custom-radio {
+  background-color: #1976D2; /* Cambia el color del Radio cuando está seleccionado */
+}
